--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,30 @@
 .Rhistory
 .RData
 .Ruserdata
+.ipynb_checkpoints
+*.RData
+*.tar.gz
+*.tar
+*.zip
+*.pdf
+*.xlsx
+*.csv
+*.dat
+*.aux
+*.idx
+*.lof
+*.log
+*.lot
+*.out
+*.toc
+*.jpeg
+*.jpg
+*.png
+*.html
+*.synctex.gz
+Resultados/*
+RData/*
+Data/*
+Documentacion/*
+.Rprofile
+Drivers/*
